--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-pytest~=6.1
-parameterized~=0.7.4
-pytest-xdist~=2.1.0
-pytest-rerunfailures~=9.1.1
+atomicwrites==1.4.0
+attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.4
+colorama==0.4.4
+execnet==1.9.0
+idna==3.2
+iniconfig==1.1.1
+packaging==21.0
+parameterized==0.7.5
+pluggy==1.0.0
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-forked==1.3.0
+pytest-rerunfailures==9.1.1
+pytest-xdist==2.1.0
+requests==2.26.0
+toml==0.10.2
+urllib3==1.26.6
